# sunr

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  configuration.json  configuration.json.example  pyproject.toml
sunr/: __init__.py  configuration.json  sunrise.py
tests/: test_sunr.py
