[tool.poetry]
name = "sunr"
version = "0.1.0"
description = ""
authors = ["Tom-Camp <tomcamp@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
rpi-ws281x = "^4.3.1"
adafruit-circuitpython-neopixel = "^6.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
